--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,15 @@
 /node_modules
 /build
 
+# postgress data
 postgres/
 
+# local env files
 .env
+
+# image uploads
+/static/products/*
+/public/products/*
 
 # Logs
 logs
